[package]
name = "terrarium"
version = "0.1.0"
authors = ["Jeff Registre <jeff.registre@nytimes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
graphql_client = "0.9.0"
http_guest = {git = "https://github.com/fastly/terrarium-rust-guest.git"}
maud = "0.21.0"
regex = "1"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
lazy_static = "1.4.0"
